# ros2_control_demo

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
docs/: for_porfolio.md  for_portfolio.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_robot_description/share/ament_index/resource_index/parent_prefix_path/: my_robot_description
install/my_robot_description/share/my_robot_description/: local_setup.sh  package.sh
install/my_robot_description/share/my_robot_description/cmake/: my_robot_descriptionConfig.cmake
install/my_robot_description/share/my_robot_description/launch/: display.launch.py
log/: latest_build
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/launch/: my_robot.launch.xml
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/launch/: display.launch.xml:Zone.Identifier
